[gd_scene load_steps=6 format=3 uid="uid://5bh1m3ruoeml"]

[ext_resource type="Script" uid="uid://xi14tm1sxobo" path="res://scenes/objects/world_borders/world_borders.gd" id="1_2750o"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ldki4"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_2750o"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_76304"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_7fsaq"]
normal = Vector2(-1, 0)

[node name="WorldBorders" type="StaticBody2D"]
script = ExtResource("1_2750o")

[node name="TopBorder" type="CollisionShape2D" parent="."]
shape = SubResource("WorldBoundaryShape2D_ldki4")

[node name="BottomBorder" type="CollisionShape2D" parent="."]
shape = SubResource("WorldBoundaryShape2D_2750o")

[node name="BorderLeft" type="CollisionShape2D" parent="."]
shape = SubResource("WorldBoundaryShape2D_76304")

[node name="BorderRight" type="CollisionShape2D" parent="."]
shape = SubResource("WorldBoundaryShape2D_7fsaq")
